fix(NodesTable): align external link icon

--- a/src/containers/App/NodesTable.scss
+++ b/src/containers/App/NodesTable.scss
@@ -9,8 +9,6 @@
 
         margin-left: 4px;
 
-        transform: translateY(-1px);
-
         .yc-button__text {
             margin: 0 4px;
         }
